force-app/main/default/objects/Advance__c/fields/Deal_Total_Loan_LTC__c.field-meta.xml
<CustomField>
    <fullName>Deal_Total_Loan_LTC__c</fullName>
    <formula>TEXT (Deal__r.Total_Loan_LTC__c*100) + &apos;% (&apos; + IF( Purchase_Price_Total__c*Deal__r.Total_Loan_LTC__c &lt; 0, &quot;(&quot;, &quot;&quot;) &amp; &quot;$&quot; &amp; 
IF(ABS(Purchase_Price_Total__c*Deal__r.Total_Loan_LTC__c) &gt;= 1000000, TEXT(FLOOR(ABS(Purchase_Price_Total__c*Deal__r.Total_Loan_LTC__c) / 1000000)) &amp; &quot;,&quot;, &quot;&quot;) &amp; 
IF(ABS(Purchase_Price_Total__c*Deal__r.Total_Loan_LTC__c) &gt;= 1000, RIGHT(TEXT(FLOOR(ABS(Purchase_Price_Total__c*Deal__r.Total_Loan_LTC__c) / 1000)), 3) &amp; &quot;,&quot;, &quot;&quot;) &amp; 
RIGHT(TEXT(FLOOR(ABS(Purchase_Price_Total__c*Deal__r.Total_Loan_LTC__c))), 3) &amp; &quot;.&quot; &amp; 
IF(MOD(ABS(Purchase_Price_Total__c*Deal__r.Total_Loan_LTC__c) , 1) * 100 &lt; 10, &quot;0&quot; &amp; TEXT(ROUND(MOD(ABS(Purchase_Price_Total__c*Deal__r.Total_Loan_LTC__c) , 1), 2) * 100), TEXT(MIN(ROUND(MOD(ABS(Purchase_Price_Total__c*Deal__r.Total_Loan_LTC__c) , 1), 2) * 100, 99))) &amp; 
IF(Purchase_Price_Total__c*Deal__r.Total_Loan_LTC__c &lt; 0, &quot;)&quot;, &quot;&quot;) + 
&apos;)&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Total Loan LTC</label>
    <type>Text</type>
</CustomField>