force-app/main/default/objects/Advance__c/fields/Distinct_Counties__c.field-meta.xml
<CustomField>
    <fullName>Distinct_Counties__c</fullName>
    <label>Distinct Counties</label>
    <length>255</length>
    <type>Text</type>
</CustomField>