force-app/main/default/objects/Advance__c/fields/Doc_Prep_Fee_Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Doc_Prep_Fee_Subtotal__c</fullName>
    <label>Doc Prep Fee Subtotal</label>
    <summarizedField>Property_Advance__c.Doc_Prep_Fee__c</summarizedField>
    <summaryForeignKey>Property_Advance__c.Advance__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>