force-app/main/default/objects/Advance__c/fields/Doc_Prep_Fee_Total__c.field-meta.xml
<CustomField>
    <fullName>Doc_Prep_Fee_Total__c</fullName>
    <formula>Doc_Prep_Fee_Subtotal__c + Doc_Prep_Fee_Adjustment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Doc Prep Fee Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>