force-app/main/default/objects/Advance__c/fields/DrawContainerId__c.field-meta.xml
<CustomField>
    <fullName>DrawContainerId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Draw Container Id</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>