force-app/main/default/objects/Advance__c/fields/Escrow_Title_Number__c.field-meta.xml
<CustomField>
    <fullName>Escrow_Title_Number__c</fullName>
    <label>Escrow/Title #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>