force-app/main/default/objects/Advance__c/fields/Evidence_of_Insurance_Approval_Comments__c.field-meta.xml
<CustomField>
    <fullName>Evidence_of_Insurance_Approval_Comments__c</fullName>
    <label>Evidence of Insurance Approval Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>