force-app/main/default/objects/Advance__c/fields/Evidence_of_Insurance_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Evidence_of_Insurance_Approval_Date__c</fullName>
    <label>Evidence of Insurance Approval Date</label>
    <type>DateTime</type>
</CustomField>