force-app/main/default/objects/Advance__c/fields/Evidence_of_Insurance_Approved__c.field-meta.xml
<CustomField>
    <fullName>Evidence_of_Insurance_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Evidence of Insurance Approved</label>
    <type>Checkbox</type>
</CustomField>