force-app/main/default/objects/Advance__c/fields/Evidence_of_Insurance_Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Evidence_of_Insurance_Approved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Evidence of Insurance Approved By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Advances2</relationshipName>
    <type>Lookup</type>
</CustomField>