force-app/main/default/objects/Advance__c/fields/Exception__c.field-meta.xml
<CustomField>
    <fullName>Exception__c</fullName>
    <description>Indicates if there is an Exception for this Advance</description>
    <inlineHelpText>Indicates if there is an Exception for this Advance</inlineHelpText>
    <label>Exception</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>