force-app/main/default/objects/Advance__c/fields/Exception_Detailed_Description__c.field-meta.xml
<CustomField>
    <fullName>Exception_Detailed_Description__c</fullName>
    <description>If Exception Type is &quot;Other&quot;, then the Exception Detailed Description is required</description>
    <inlineHelpText>If Exception Type is &quot;Other&quot;, then the Exception Detailed Description is required</inlineHelpText>
    <label>Exception Detailed Description</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>