force-app/main/default/objects/Advance__c/fields/Exception_Type__c.field-meta.xml
<CustomField>
    <fullName>Exception_Type__c</fullName>
    <description>If there is an Exception, this is the Exception Type</description>
    <label>Exception Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Exception__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Funding Over $1M</fullName>
            </value>
            <value>
                <fullName>Business Plan</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>