force-app/main/default/objects/Advance__c/fields/Exit_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Exit_Strategy__c</fullName>
    <label>Exit Strategy</label>
    <type>TextArea</type>
</CustomField>