force-app/main/default/objects/Advance__c/fields/Expired__c.field-meta.xml
<CustomField>
    <fullName>Expired__c</fullName>
    <formula>Deal__r.Expired__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expired</label>
    <type>Text</type>
</CustomField>