force-app/main/default/objects/Advance__c/fields/Flood_Certificate_Approval_Comments__c.field-meta.xml
<CustomField>
    <fullName>Flood_Certificate_Approval_Comments__c</fullName>
    <label>Flood Certificate Approval Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>