force-app/main/default/objects/Advance__c/fields/Flood_Certificate_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Flood_Certificate_Approval_Date__c</fullName>
    <label>Flood Certificate Approval Date</label>
    <type>DateTime</type>
</CustomField>