force-app/main/default/objects/Advance__c/fields/Flood_Certificate_Approved__c.field-meta.xml
<CustomField>
    <fullName>Flood_Certificate_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flood Certificate Approved</label>
    <type>Checkbox</type>
</CustomField>