force-app/main/default/objects/Advance__c/fields/Flood_Certificate_Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Flood_Certificate_Approved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Flood Certificate Approved By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Advances3</relationshipName>
    <type>Lookup</type>
</CustomField>