force-app/main/default/objects/Advance__c/fields/Funding_Conditions_Email_Date__c.field-meta.xml
<CustomField>
    <fullName>Funding_Conditions_Email_Date__c</fullName>
    <description>Used to capture when a funding conditions email is sent.</description>
    <label>Funding Conditions Email Date</label>
    <type>Date</type>
</CustomField>