force-app/main/default/objects/Advance__c/fields/Funding_Shield_Cert_Status__c.field-meta.xml
<CustomField>
    <fullName>Funding_Shield_Cert_Status__c</fullName>
    <description>Indicates if Wire Instructions have been received</description>
    <inlineHelpText>Indicates if Wire Instructions have been received</inlineHelpText>
    <label>Funding Shield Cert Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>