force-app/main/default/objects/Advance__c/fields/Holdback_Amount_Total__c.field-meta.xml
<CustomField>
    <fullName>Holdback_Amount_Total__c</fullName>
    <label>Holdback Amount Total</label>
    <summarizedField>Property_Advance__c.Holdback_Amount__c</summarizedField>
    <summaryForeignKey>Property_Advance__c.Advance__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>