force-app/main/default/objects/Advance__c/fields/HUD_Settlement_Statement_Status__c.field-meta.xml
<CustomField>
    <fullName>HUD_Settlement_Statement_Status__c</fullName>
    <label>HUD/Settlement Statement Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Revisions</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>