force-app/main/default/objects/Advance__c/fields/Index__c.field-meta.xml
<CustomField>
    <fullName>Index__c</fullName>
    <formula>text( Deal__r.Index__c)</formula>
    <label>Index</label>
    <type>Text</type>
</CustomField>