force-app/main/default/objects/Advance__c/fields/Index_Floor__c.field-meta.xml
<CustomField>
    <fullName>Index_Floor__c</fullName>
    <formula>text( Deal__r.Floor__c )</formula>
    <label>Index Floor</label>
    <type>Text</type>
</CustomField>