force-app/main/default/objects/Advance__c/fields/Index_Margin__c.field-meta.xml
<CustomField>
    <fullName>Index_Margin__c</fullName>
    <formula>Deal__r.Index_Margin__c</formula>
    <label>Index Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>