force-app/main/default/objects/Advance__c/fields/Initial_Disbursement_Total__c.field-meta.xml
<CustomField>
    <fullName>Initial_Disbursement_Total__c</fullName>
    <label>Initial Disbursement Total</label>
    <summarizedField>Property_Advance__c.Initial_Disbursement__c</summarizedField>
    <summaryForeignKey>Property_Advance__c.Advance__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>