force-app/main/default/objects/Advance__c/fields/Inspection_Fee_Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Fee_Subtotal__c</fullName>
    <label>Inspection Fee Subtotal</label>
    <summarizedField>Property_Advance__c.Inspection_Fee__c</summarizedField>
    <summaryForeignKey>Property_Advance__c.Advance__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>