force-app/main/default/objects/Advance__c/fields/Inspection_Fee_Total__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Fee_Total__c</fullName>
    <formula>Inspection_Fee_Adjustment__c + Inspection_Fee_Subtotal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inspection Fee Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>