force-app/main/default/objects/Advance__c/fields/Inspection_Method__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Method__c</fullName>
    <label>Inspection Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sitewire</fullName>
            </value>
            <value>
                <fullName>Trinity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>