force-app/main/default/objects/Advance__c/fields/Interest_Rate_Type__c.field-meta.xml
<CustomField>
    <fullName>Interest_Rate_Type__c</fullName>
    <formula>Text(Deal__r.Interest_Rate_Type__c)</formula>
    <label>Interest Rate Type</label>
    <type>Text</type>
</CustomField>