force-app/main/default/objects/Advance__c/fields/Interest_Reserves_Payment__c.field-meta.xml
<CustomField>
    <fullName>Interest_Reserves_Payment__c</fullName>
    <label>Interest Reserves Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>