force-app/main/default/objects/Advance__c/fields/InterestReserves__c.field-meta.xml
<CustomField>
    <fullName>InterestReserves__c</fullName>
    <description>This field was added for Bridge Funding.  This field displays the interest reserves the borrower must credit at closing.</description>
    <inlineHelpText>Interest reserves the borrower must credit at closing.</inlineHelpText>
    <label>Interest Reserves</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>