force-app/main/default/objects/Advance__c/fields/Is_Closer__c.field-meta.xml
<CustomField>
    <fullName>Is_Closer__c</fullName>
    <description>This will equal true if the Closer if the same person as current User</description>
    <formula>$User.Id = Closer__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This will equal true if the Closer if the same person as current User</inlineHelpText>
    <label>Is Closer</label>
    <type>Checkbox</type>
</CustomField>