force-app/main/default/objects/Advance__c/fields/Lender__c.field-meta.xml
<CustomField>
    <fullName>Lender__c</fullName>
    <description>Who the lender was on this Advance</description>
    <label>Lender</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CoreVest American Finance Lender LLC, a Delaware limited liability company</fullName>
                <default>true</default>
                <label>CoreVest American Finance Lender LLC, a Delaware limited liability company</label>
            </value>
            <value>
                <fullName>5 Arch Funding Corp.</fullName>
            </value>
            <value>
                <fullName>Riverbend Lending</fullName>
            </value>
            <value>
                <fullName>Third Party Originator</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>