force-app/main/default/objects/Advance__c/fields/Loan_Advance_Number__c.field-meta.xml
<CustomField>
    <fullName>Loan_Advance_Number__c</fullName>
    <formula>Loan_Number__c + &quot;-&quot; +  Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loan Advance Number</label>
    <type>Text</type>
</CustomField>