force-app/main/default/objects/Advance__c/fields/Loan_Document_Status__c.field-meta.xml
<CustomField>
    <fullName>Loan_Document_Status__c</fullName>
    <description>SAB only</description>
    <label>Loan Document Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unsigned Docs in Review</fullName>
            </value>
            <value>
                <fullName>Docs out to Title</fullName>
            </value>
            <value>
                <fullName>Signed Docs in Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>