force-app/main/default/objects/Advance__c/fields/Loan_Number__c.field-meta.xml
<CustomField>
    <fullName>Loan_Number__c</fullName>
    <formula>Deal__r.Deal_Loan_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loan Number</label>
    <type>Text</type>
</CustomField>