force-app/main/default/objects/Advance__c/fields/Loan_Sizing_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Loan_Sizing_Completed_Date__c</fullName>
    <formula>Deal__r.Loan_Sizing_Completed_Date__c</formula>
    <label>Loan Sizing Completed Date</label>
    <type>Date</type>
</CustomField>