force-app/main/default/objects/Advance__c/fields/Loan_Type__c.field-meta.xml
<CustomField>
    <fullName>Loan_Type__c</fullName>
    <formula>TEXT(Deal__r.LOC_Loan_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loan Type</label>
    <type>Text</type>
</CustomField>