force-app/main/default/objects/Advance__c/fields/Manager_Approval_Comments__c.field-meta.xml
<CustomField>
    <fullName>Manager_Approval_Comments__c</fullName>
    <label>Manager Approval Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>