force-app/main/default/objects/Advance__c/fields/Manager_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Manager_Approval_Date__c</fullName>
    <label>Manager Approval Date</label>
    <type>DateTime</type>
</CustomField>