force-app/main/default/objects/Advance__c/fields/Manager_Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Manager_Approved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manager Approved By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Advances1</relationshipName>
    <type>Lookup</type>
</CustomField>