force-app/main/default/objects/Advance__c/fields/Max_Initial_LTV_LTC__c.field-meta.xml
<CustomField>
    <fullName>Max_Initial_LTV_LTC__c</fullName>
    <formula>ROUND(Approved_Advance_Amount_Total__c/MAX(BPO_Appraisal_Value_Total__c, Purchase_Price_Total__c),2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Max Initial LTV/LTC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>