force-app/main/default/objects/Advance__c/fields/Max_LTC__c.field-meta.xml
<CustomField>
    <fullName>Max_LTC__c</fullName>
    <formula>TEXT(Deal__r.LTC__c*100)+ &apos;% (&apos; + IF( MAX_LTC_Dollar_nooverride__c  &lt; 0, &quot;(&quot;, &quot;&quot;) &amp; &quot;$&quot; &amp;
IF(ABS(MAX_LTC_Dollar_nooverride__c) &gt;= 1000000, TEXT(FLOOR(ABS(MAX_LTC_Dollar_nooverride__c) / 1000000)) &amp; &quot;,&quot;, &quot;&quot;) &amp;
IF(ABS(MAX_LTC_Dollar_nooverride__c) &gt;= 1000, RIGHT(TEXT(FLOOR(ABS(MAX_LTC_Dollar_nooverride__c) / 1000)), 3) &amp; &quot;,&quot;, &quot;&quot;) &amp;
RIGHT(TEXT(FLOOR(ABS(MAX_LTC_Dollar_nooverride__c))), 3) &amp; &quot;.&quot; &amp;
IF(MOD(ABS(MAX_LTC_Dollar_nooverride__c) , 1) * 100 &lt; 10, &quot;0&quot; &amp; TEXT(ROUND(MOD(ABS(MAX_LTC_Dollar_nooverride__c) , 1), 2) * 100), TEXT(MIN(ROUND(MOD(ABS(MAX_LTC_Dollar_nooverride__c) , 1), 2) * 100, 99))) &amp;
IF(MAX_LTC_Dollar_nooverride__c &lt; 0, &quot;)&quot;, &quot;&quot;) +
&apos;)&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Max LTC%</label>
    <type>Text</type>
</CustomField>