force-app/main/default/objects/Advance__c/fields/MAX_LTC_Dollar_nooverride__c.field-meta.xml
<CustomField>
    <fullName>MAX_LTC_Dollar_nooverride__c</fullName>
    <label>MAX LTC Dollar nooverride</label>
    <summarizedField>Property_Advance__c.Max_LTC_Dollar_nooverride__c</summarizedField>
    <summaryForeignKey>Property_Advance__c.Advance__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>