force-app/main/default/objects/Advance__c/fields/Max_LTC_Total__c.field-meta.xml
<CustomField>
    <fullName>Max_LTC_Total__c</fullName>
    <label>Max LTC Total</label>
    <summarizedField>Property_Advance__c.Max_LTC_Dollar__c</summarizedField>
    <summaryForeignKey>Property_Advance__c.Advance__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>