force-app/main/default/objects/Advance__c/fields/Max_LTV_Total__c.field-meta.xml
<CustomField>
    <fullName>Max_LTV_Total__c</fullName>
    <label>Max LTV Total</label>
    <summarizedField>Property_Advance__c.Max_LTV_Dollar__c</summarizedField>
    <summaryForeignKey>Property_Advance__c.Advance__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>