force-app/main/default/objects/Advance__c/fields/Net_Funding_Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Net_Funding_Subtotal__c</fullName>
    <formula>Approved_Advance_Amount_Total__c - ( Origination_Fee_Subtotal__c + Advance_Fee_Subtotal__c + BPO_Appraisal_Fee_Subtotal__c + Doc_Prep_Fee_Subtotal__c + BlackSquare_Fee_Subtotal__c  + Daily_Interest_Rate_Subtotal__c + Inspection_Fee_Subtotal__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Funding Subtotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>