force-app/main/default/objects/Advance__c/fields/Net_Funding_Total__c.field-meta.xml
<CustomField>
    <fullName>Net_Funding_Total__c</fullName>
    <formula>Approved_Advance_Amount_Total__c - (Origination_Fee_Total__c + Advance_Fee_Total__c + BPO_Appraisal_Fee_Total__c + Doc_Prep_Fee_Total__c +  BlackSquare_Fee_Total__c + Daily_Interest_Rate_Total__c + Inspection_Fee_Total__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Funding Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>