force-app/main/default/objects/Advance__c/fields/Number_of_Wires__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Wires__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Number of Wires</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>