force-app/main/default/objects/Advance__c/fields/Original_UPB__c.field-meta.xml
<CustomField>
    <fullName>Original_UPB__c</fullName>
    <formula>Deal__r.Original_UPB_Svc__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Original UPB</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>