force-app/main/default/objects/Advance__c/fields/Origination_Fee_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Origination_Fee_Adjustment__c</fullName>
    <label>Origination Fee Adjustment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>