force-app/main/default/objects/Advance__c/fields/Origination_Fee_Perc__c.field-meta.xml
<CustomField>
    <fullName>Origination_Fee_Perc__c</fullName>
    <formula>Deal__r.CAF_Upfront_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Origination Fee % from the Deal</inlineHelpText>
    <label>Origination Fee %</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>