force-app/main/default/objects/Advance__c/fields/Origination_Fee_Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Origination_Fee_Subtotal__c</fullName>
    <label>Origination Fee Subtotal</label>
    <summarizedField>Property_Advance__c.Origination_Fee__c</summarizedField>
    <summaryForeignKey>Property_Advance__c.Advance__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>