force-app/main/default/objects/Advance__c/fields/Origination_Fee_Total__c.field-meta.xml
<CustomField>
    <fullName>Origination_Fee_Total__c</fullName>
    <formula>Origination_Fee_Subtotal__c + Origination_Fee_Adjustment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Origination Fee Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>