force-app/main/default/objects/Advance__c/fields/Other_Fee_Total__c.field-meta.xml
<CustomField>
    <fullName>Other_Fee_Total__c</fullName>
    <label>Other Fee Total</label>
    <summarizedField>Property_Advance__c.Other_Fee__c</summarizedField>
    <summaryForeignKey>Property_Advance__c.Advance__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>