force-app/main/default/objects/Advance__c/fields/Outstanding_Facility_Amount__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Facility_Amount__c</fullName>
    <label>Total Remaining Commitment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>