force-app/main/default/objects/Advance__c/fields/Outstanding_Loan_Amount_PreAdvance__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Loan_Amount_PreAdvance__c</fullName>
    <label>Outstanding Loan Amount PreAdvance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>