force-app/main/default/objects/Advance__c/fields/Over_LOC_Commitment__c.field-meta.xml
<CustomField>
    <fullName>Over_LOC_Commitment__c</fullName>
    <formula>Deal__r.Over_LOC_Commitment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Over LOC Commitment</label>
    <type>Text</type>
</CustomField>