force-app/main/default/objects/Advance__c/fields/Probability__c.field-meta.xml
<CustomField>
    <fullName>Probability__c</fullName>
    <defaultValue>&apos;N/A&apos;</defaultValue>
    <description>Probability of Advance Funding. Manual Entry By Bridge Users. Used in the Bridge Pipeline Funding Forecast Reports.</description>
    <inlineHelpText>Probability of Advance Funding. Used For Forecasting.</inlineHelpText>
    <label>Probability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>0%</fullName>
            </value>
            <value>
                <fullName>50%</fullName>
            </value>
            <value>
                <fullName>80%</fullName>
            </value>
            <value>
                <fullName>100%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>