force-app/main/default/objects/Advance__c/fields/Prop_Max_Initial_LTV_LTC__c.field-meta.xml
<CustomField>
    <fullName>Prop_Max_Initial_LTV_LTC__c</fullName>
    <formula>TEXT(Max_Initial_LTV_LTC__c*100) + &apos;%&apos;  + &apos;% (&apos; + IF( Approved_Advance_Amount_Total__c &lt; 0, &quot;(&quot;, &quot;&quot;) &amp; &quot;$&quot; &amp; 
IF(ABS(Approved_Advance_Amount_Total__c) &gt;= 1000000, TEXT(FLOOR(ABS(Approved_Advance_Amount_Total__c) / 1000000)) &amp; &quot;,&quot;, &quot;&quot;) &amp; 
IF(ABS(Approved_Advance_Amount_Total__c) &gt;= 1000, RIGHT(TEXT(FLOOR(ABS(Approved_Advance_Amount_Total__c) / 1000)), 3) &amp; &quot;,&quot;, &quot;&quot;) &amp; 
RIGHT(TEXT(FLOOR(ABS(Approved_Advance_Amount_Total__c))), 3) &amp; &quot;.&quot; &amp; 
IF(MOD(ABS(Approved_Advance_Amount_Total__c) , 1) * 100 &lt; 10, &quot;0&quot; &amp; TEXT(ROUND(MOD(ABS(Approved_Advance_Amount_Total__c) , 1), 2) * 100), TEXT(MIN(ROUND(MOD(ABS(Approved_Advance_Amount_Total__c) , 1), 2) * 100, 99))) &amp; 
IF(Approved_Advance_Amount_Total__c &lt; 0, &quot;)&quot;, &quot;&quot;) + 
&apos;)&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prop Max Initial LTV/LTC</label>
    <type>Text</type>
</CustomField>